typescript2/pkg-grammar-treesitter/grammar.js
    source_file: ($) => repeat($._declaration),

    _declaration: ($) =>
      choice(
        $.class_declaration,
        $.enum_declaration,
        $.interface_declaration,
        $.implements_for_declaration,
        $.function_declaration,
        $.client_declaration,
        $.generator_declaration,
        $.retry_policy_declaration,
        $.template_string_declaration,
        $.type_alias_declaration,
        $.test_declaration,
        $.testset_declaration,
        $.let_declaration,
        $.empty_statement,
      ),

    // ==========================================================================
    // Class
    // ==========================================================================

    function_declaration: ($) =>
      prec.right(
        seq(
          'function',
          field('name', $.identifier),
          optional(field('type_parameters', $.generic_parameters)),
          field('parameters', $.parameter_list),
          optional(seq('->', field('return_type', $._type))),
          optional($.throws_clause),
          optional(field('body', $.function_body)),
        ),
      ),

    parameter_list: ($) => seq('(', commaSep($.parameter), ')'),

    parameter: ($) =>
      seq(
        field('name', $.identifier),
        optional(seq(':', field('type', $._type))),
        optional(seq('=', field('default', $._expression))),
      ),

    function_body: ($) =>
      seq(
        '{',
        repeat(choice($.client_field, $.prompt_field, $._statement)),
        '}',
      ),

    // `client GPT4` | `client: Brain,` | `client "openai/gpt-4o"`
    // | `client openai/gpt-4o-mini`
    _type: ($) =>
      choice(
        $.union_type,
        $.optional_type,
        $.array_type,
        $.type_path,
        $.function_type,
        $.parenthesized_type,
        $.literal_type,
      ),

    array_type: ($) => prec(3, seq(field('type', $._type), '[', ']')),

    // `string`, `User`, `baml.iter.Iterator<Item = string, Error = never>`,
    // `map<string, int>`, `U.CompareError`
    type_path: ($) =>
      prec.right(
        seq(
          $.identifier,
          repeat(seq('.', $.identifier)),
          optional(field('type_arguments', $.type_arguments)),
        ),
      ),

    type_arguments: ($) =>
      seq('<', commaSep1(choice($._type, $.named_type_argument)), '>'),

    function_type: ($) =>
      prec.right(
        2,
        seq(
          field('parameters', $.function_type_parameters),
          '->',
          field('return_type', $._type),
          optional($.throws_clause),
        ),
      ),

    function_type_parameters: ($) =>
      seq('(', commaSep($.function_type_parameter), ')'),

    function_type_parameter: ($) =>
      choice(
        seq(field('name', $.identifier), ':', field('type', $._type)),
        field('type', $._type),
      ),

    _statement: ($) =>
      choice(
        $.let_declaration,
        $.expression_statement,
        $.while_statement,
        $.for_statement,
        $.defer_statement,
        $.test_declaration,
        $.testset_declaration,
        $.function_declaration,
        $.empty_statement,
      ),

    expression_statement: ($) => prec.right(seq($._expression, optional(';'))),

    // `let x = v;` `const y: int = x;` `watch let z = v;`
    // `const User { name } = user;` `let v: int = value else { return 0; };`
    let_declaration: ($) =>
      prec.right(
        prec.dynamic(
          1,
          seq(
          optional('watch'),
          choice('let', 'const'),
          field('pattern', $._pattern),
            optional(seq('=', field('value', $._expression))),
            optional(field('else', $.else_clause)),
            optional(';'),
          ),
        ),
      ),

    _expression: ($) =>
      choice(
        $.identifier,
        $.number,
        $.boolean,
        $.null,
        $.string,
        $.byte_string,
        $.raw_string,
        $.backtick_string,
        $.member_expression,
        $.upcast_expression,
        $.index_expression,
        $.call_expression,
        $.optional_call_expression,
        $.constructor_expression,
        $.parenthesized_expression,
        $.array_expression,
        $.map_expression,
        $.lambda_expression,
        $.block,
        $.if_expression,
        $.match_expression,
        $.catch_expression,
        $.is_expression,
        $.binary_expression,
        $.coalesce_expression,
        $.unary_expression,
        $.assignment_expression,
        $.await_expression,
        $.spawn_expression,
        $.throw_expression,
        $.return_expression,
        $.break_expression,
        $.continue_expression,
        alias($.const_identifier, $.identifier),
      ),

    // The real lexer has no `const` keyword; `let const = x; const` is legal.
    member_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          field('operator', choice('.', '?.')),
          field('property', alias($.identifier, $.property_identifier)),
        ),
      ),

    // `expr.as<Iface>` — explicit interface upcast (BEP-044).
    upcast_expression: ($) =>
      prec(
        PREC.MEMBER,
        seq(
          field('object', $._expression),
          '.',
          'as',
          '<',
          field('type', $._type),
          '>',
        ),
      ),

    index_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field('object', $._expression),
          optional(field('operator', '?.')),
          '[',
          field('index', $._expression),
          ']',
        ),
      ),

    call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field('function', $._expression),
          optional(field('type_arguments', $.type_arguments)),
          field('arguments', $.arguments),
        ),
      ),

    // `callback?.(42)`
    optional_call_expression: ($) =>
      prec(
        PREC.CALL,
        seq(
          field('function', $._expression),
          '?.',
          field('arguments', $.arguments),
        ),
      ),

    arguments: ($) => seq('(', commaSep(choice($._expression, $.named_argument)), ')'),

    // `f(limit = 2)`
    named_argument: ($) =>
      seq(field('name', $.identifier), '=', field('value', $._expression)),

    // `User { name: "x", ...rest }` — fields require `:` (or spread), which
    // is what lets GLR discard bogus constructor parses of `if x {` blocks.
    constructor_expression: ($) =>
      prec.dynamic(
        1,
        seq(
          field('type', choice($.identifier, $.member_expression)),
          optional(field('type_arguments', $.type_arguments)),
          field('body', $.constructor_body),
        ),
      ),

    constructor_body: ($) =>
      seq('{', commaSep(choice($.constructor_field, $.spread_element)), '}'),

    constructor_field: ($) =>
      seq(
        field('name', alias($.identifier, $.property_identifier)),
        ':',
        field('value', $._expression),
      ),

    spread_element: ($) => seq('...', $._expression),

    parenthesized_expression: ($) => seq('(', $._expression, ')'),

    array_expression: ($) =>
      seq('[', commaSep(choice($._expression, $.spread_element)), ']'),

    // `{ "a": 1, "b": [2] }` — JSON-ish map literal (keys are strings).
    map_expression: ($) =>
      seq('{', commaSep1($.map_entry), '}'),

    map_entry: ($) =>
      seq(field('key', $.string), ':', field('value', $._expression)),

    // `(x: int) -> int { x * 2 }` | `(x) -> { ... }` | `() -> int { x }`
    lambda_expression: ($) =>
      seq(
        field('parameters', $.lambda_parameters),
        '->',
        optional(field('return_type', $._type)),
        optional($.throws_clause),
        field('body', $.block),
      ),

    lambda_parameters: ($) => seq('(', commaSep($.parameter), ')'),

    block: ($) => seq('{', repeat($._statement), '}'),

    // `if (cond) {..} else ..` | `if cond {..}` | `if let p = e {..}` |
    // `if const p: T = e {..}`
    binary_expression: ($) => {
      const table = [
        ['||', PREC.OR],
        ['&&', PREC.AND],
        ['|', PREC.BIT_OR],
        ['^', PREC.BIT_XOR],
        ['&', PREC.BIT_AND],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['<', PREC.COMPARE],
        ['>', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['instanceof', PREC.COMPARE],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MUL],
        ['/', PREC.MUL],
        ['%', PREC.MUL],
      ];
      return choice(
        ...table.map(([op, p]) =>
          prec.left(
            p,
            seq(
              field('left', $._expression),
              field('operator', op),
              field('right', $._expression),
            ),
          ),
        ),
      );
    },

    // `a ?? b` — distinct node (the parser assembles it from two `?` tokens).
    coalesce_expression: ($) =>
      prec.left(
        PREC.COALESCE,
        seq(field('left', $._expression), '??', field('right', $._expression)),
      ),

    unary_expression: ($) =>
      prec(
        PREC.UNARY,
        seq(field('operator', choice('!', '-', '~', '+')), field('operand', $._expression)),
      ),

    assignment_expression: ($) =>
      prec.right(
        PREC.ASSIGN,
        seq(
          field('left', $._expression),
          field(
            'operator',
            choice('=', '+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>='),
          ),
          field('right', $._expression),
        ),
      ),

    await_expression: ($) =>
      prec(PREC.UNARY, seq('await', field('value', $._expression))),

    // `spawn { ... }` | `spawn NAME { ... }` |
    // `spawn NAME? with MODIFIER, MODIFIER { ... }`
    //
    // The name labels the task and the modifiers transform its plan; both are
    // ordinary expressions, so the `{` that opens the body is what ends the
    // list. As in a condition position, a name that could also read as a
    // constructor (`spawn Foo { .. }`) parses as the name plus the body: the
    // other split leaves the body missing, so GLR discards it.
    spawn_expression: ($) =>
      seq(
        'spawn',
        optional(field('name', prec.dynamic(-1, $._expression))),
        optional(seq('with', commaSep1(field('modifier', $._expression)))),
        field('body', $.block),
      ),

    return_expression: ($) =>
      prec.right(seq('return', optional(field('value', $._expression)))),

    _pattern: ($) => choice($.chain_pattern, $._pattern_union),

    chain_pattern: ($) =>
      seq($._pattern_union, repeat1(seq(':', $._pattern_union))),

    _pattern_union: ($) => choice($.union_pattern, $._pattern_atom),

    type_pattern: ($) => choice($._type, $.null),

    // ==========================================================================
    // Terminals
    // ==========================================================================

    identifier: (_) => token(IDENT_REGEX),

    number: (_) =>
      token(
        choice(
          /[0-9]+n/, //                       bigint
          /[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?/, // float
          /[0-9]+[eE][+-]?[0-9]+/, //          scientific
          /[0-9]+/, //                         integer
        ),
      ),

    boolean: (_) => choice('true', 'false'),

    null: (_) => 'null',

    string: (_) => token(seq('"', repeat(choice(/[^"\\]/, /\\./)), '"')),
